Deleting useless columns and changing some data to correct values

--- a/Preprocess/Preprocess.ipynb
+++ b/Preprocess/Preprocess.ipynb
@@ -2,8 +2,209 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d6369821",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "49466cb2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "data2020 = pd.read_excel('../Data/Датасет 2020.xlsx').drop(['Год выдачи паспорта'],axis = 1)\n",
+    "data2021 = pd.read_excel('../Data/Датасет 2021.xlsx').drop(['Год выдачи паспорта'],axis = 1)\n",
+    "data2022 = pd.read_excel('../Data/Датасет 2022.xlsx').drop(['Год выдачи паспорта'],axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "a944150c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2020 = data2020.replace(to_replace='скидки не было', value=0, regex=True)\n",
+    "data2021 = data2021.replace(to_replace='скидки не было', value=0, regex=True)\n",
+    "data2022 = data2022.replace(to_replace='скидки не было', value=0, regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "3d416f21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Торговый день</th>\n",
+       "      <th>ID Клиента</th>\n",
+       "      <th>Регион проживания</th>\n",
+       "      <th>МАГАЗИН</th>\n",
+       "      <th>Тип карточки (B-VISA, S-MASTERCARD или МИР)</th>\n",
+       "      <th>Сумма расходов</th>\n",
+       "      <th>Предоставленная скидка</th>\n",
+       "      <th>Возраст клиента</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-01-19</td>\n",
+       "      <td>10208837</td>\n",
+       "      <td>Республика Татарстан</td>\n",
+       "      <td>Ресторан \"Буйвол\"</td>\n",
+       "      <td>B</td>\n",
+       "      <td>15282.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-01-21</td>\n",
+       "      <td>11261302</td>\n",
+       "      <td>Ханты-Мансийский автономный округ</td>\n",
+       "      <td>Барбершоп</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1063.0</td>\n",
+       "      <td>09</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-01-22</td>\n",
+       "      <td>11261302</td>\n",
+       "      <td>Ханты-Мансийский автономный округ</td>\n",
+       "      <td>Такси</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1576.3</td>\n",
+       "      <td>09</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-01-22</td>\n",
+       "      <td>10544129</td>\n",
+       "      <td>Волгоградская область</td>\n",
+       "      <td>Бар \"Коктейль\"</td>\n",
+       "      <td>B</td>\n",
+       "      <td>13375.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-01-28</td>\n",
+       "      <td>11259870</td>\n",
+       "      <td>Ростовская область</td>\n",
+       "      <td>Бар \"Коктейль\"</td>\n",
+       "      <td>S</td>\n",
+       "      <td>5288.0</td>\n",
+       "      <td>05</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Торговый день  ID Клиента                  Регион проживания  \\\n",
+       "0    2021-01-19    10208837               Республика Татарстан   \n",
+       "1    2021-01-21    11261302  Ханты-Мансийский автономный округ   \n",
+       "2    2021-01-22    11261302  Ханты-Мансийский автономный округ   \n",
+       "3    2021-01-22    10544129              Волгоградская область   \n",
+       "4    2021-01-28    11259870                 Ростовская область   \n",
+       "\n",
+       "             МАГАЗИН Тип карточки (B-VISA, S-MASTERCARD или МИР)  \\\n",
+       "0  Ресторан \"Буйвол\"                                           B   \n",
+       "1          Барбершоп                                           B   \n",
+       "2              Такси                                           S   \n",
+       "3     Бар \"Коктейль\"                                           B   \n",
+       "4     Бар \"Коктейль\"                                           S   \n",
+       "\n",
+       "   Сумма расходов Предоставленная скидка  Возраст клиента  \n",
+       "0         15282.0                      0               39  \n",
+       "1          1063.0                     09               33  \n",
+       "2          1576.3                     09               33  \n",
+       "3         13375.0                     17               25  \n",
+       "4          5288.0                     05               37  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2021.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "60f2dc1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regions2020 = sorted(data2020['Регион проживания'].unique())\n",
+    "regions2021 = sorted(data2021['Регион проживания'].unique())\n",
+    "regions2022 = sorted(data2022['Регион проживания'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c6e6def3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['-', 'Алтайский край', 'Архангельская область', 'Астраханская область', 'Белгородская область', 'Владимирская область', 'Волгоградская область', 'Воронежская область', 'Забайкальский край', 'Иркутская область', 'Калининградская область', 'Калужская область', 'Камчатский край', 'Кемеровская область', 'Кировская область', 'Краснодарский край', 'Красноярский край', 'Курганская область', 'Курская область', 'Липецкая область', 'Магаданская область', 'Московская область', 'Мурманская область', 'Нижегородская область', 'Новосибирская область', 'Омская область', 'Орловская область', 'Пензенская область', 'Пермский край', 'Приморский край', 'Псковская область', 'Республика Адыгея', 'Республика Башкортостан', 'Республика Бурятия', 'Республика Калмыкия', 'Республика Карелия', 'Республика Коми', 'Республика Марий Эл', 'Республика Татарстан', 'Республика Удмуртия', 'Республика Хакасия', 'Ростовская область', 'Самарская область', 'Саратовская область', 'Свердловская область', 'Смоленская область', 'Ставропольский край', 'Тверская область', 'Томская область', 'Тюменская область', 'Ульяновская область', 'Хабаровский край', 'Ханты-Мансийский автономный округ', 'Челябинская область', 'Чувашская Республика', 'Ямало-Ненецкий автономный округ', 'Ярославская область', 'г.Москва', 'г.Санкт-Петербург']\n",
+      "\n",
+      "\n",
+      "['Алтайский край', 'Амурская область', 'Астраханская область', 'Белгородская область', 'Брянская область', 'Владимирская область', 'Волгоградская область', 'Вологодская область', 'Воронежская область', 'Ивановская область', 'Иркутская область', 'Калининградская область', 'Калужская область', 'Камчатский край', 'Кемеровская область', 'Кировская область', 'Краснодарский край', 'Красноярский край', 'Курская область', 'Ленинградская область', 'Липецкая область', 'Московская область', 'Мурманская область', 'Нижегородская область', 'Новгородская область', 'Новосибирская область', 'Омская область', 'Оренбургская область', 'Орловская область', 'Пензенская область', 'Пермский край', 'Приморский край', 'Псковская область', 'Республика Башкортостан', 'Республика Бурятия', 'Республика Коми', 'Республика Марий Эл', 'Республика Мордовия', 'Республика Татарстан', 'Республика Удмуртия', 'Республика Хакасия', 'Ростовская область', 'Рязанская область', 'Самарская область', 'Саратовская область', 'Свердловская область', 'Смоленская область', 'Ставропольский край', 'Тамбовская область', 'Тверская область', 'Томская область', 'Тульская область', 'Тюменская область', 'Ульяновская область', 'Хабаровский край', 'Ханты-Мансийский автономный округ', 'Челябинская область', 'Чувашская Республика', 'Чукотский автономный округ', 'Ямало-Ненецкий автономный округ', 'г.Москва', 'г.Санкт-Петербург']\n",
+      "\n",
+      "\n",
+      "['Амурская область', 'Архангельская область', 'Астраханская область', 'Белгородская область', 'Брянская область', 'Волгоградская область', 'Вологодская область', 'Воронежская область', 'Забайкальский край', 'Ивановская область', 'Иркутская область', 'Кабардино-Балкарская Республика', 'Калининградская область', 'Калужская область', 'Кемеровская область', 'Кировская область', 'Краснодарский край', 'Красноярский край', 'Курганская область', 'Ленинградская область', 'Липецкая область', 'Московская область', 'Мурманская область', 'Нижегородская область', 'Новосибирская область', 'Омская область', 'Оренбургская область', 'Пензенская область', 'Пермский край', 'Приморский край', 'Псковская область', 'Республика Башкортостан', 'Республика Коми', 'Республика Марий Эл', 'Республика Мордовия', 'Республика Северная Осетия-Алания', 'Республика Татарстан', 'Республика Удмуртия', 'Ростовская область', 'Самарская область', 'Саратовская область', 'Свердловская область', 'Смоленская область', 'Ставропольский край', 'Тамбовская область', 'Томская область', 'Тульская область', 'Тюменская область', 'Ульяновская область', 'Хабаровский край', 'Ханты-Мансийский автономный округ', 'Челябинская область', 'Чеченская Республика', 'Чувашская Республика', 'Ямало-Ненецкий автономный округ', 'Ярославская область', 'г.Москва', 'г.Санкт-Петербург']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(regions2020,regions2021,regions2022,sep='\\n\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf4a229a",
    "metadata": {},
    "outputs": [],
    "source": []
