Sorting data by region and stores

--- a/Preprocess/Preprocess.ipynb
+++ b/Preprocess/Preprocess.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "49466cb2",
+   "id": "fc8d47d0",
    "metadata": {
     "scrolled": true
    },
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a944150c",
+   "id": "7b92c899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "3d416f21",
+   "id": "7ac24f86",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "60f2dc1e",
+   "id": "323ae506",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c6e6def3",
+   "id": "8cac3fa5",
    "metadata": {},
    "outputs": [
     {
@@ -203,8 +203,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "id": "d8e4fa9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stores2020 = sorted(data2020['МАГАЗИН'].unique())\n",
+    "stores2021 = sorted(data2021['МАГАЗИН'].unique())\n",
+    "stores2022 = sorted(data2022['МАГАЗИН'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2b4a3b6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Автотранспорт', 'Алкогольный магазин', 'Бар \"Иной\"', 'Бар \"Коктейль\"', 'Барбершоп', 'Не определено', 'Перевод денег на депозит', 'Покупка одежды', 'Покупка техники', 'Покупки Ozon', 'Ресторан \"Буйвол\"', 'Салон красоты', 'Такси', 'Турагенство']\n",
+      "\n",
+      "\n",
+      "['Автотранспорт', 'Алкогольный магазин', 'Бар \"Иной\"', 'Бар \"Коктейль\"', 'Барбершоп', 'Не определено', 'Перевод денег на депозит', 'Покупка одежды', 'Покупка техники', 'Покупки Ozon', 'Ресторан \"Буйвол\"', 'Салон красоты', 'Такси', 'Турагенство']\n",
+      "\n",
+      "\n",
+      "['Автотранспорт', 'Алкогольный магазин', 'Бар \"Коктейль\"', 'Барбершоп', 'Не определено', 'Покупка одежды', 'Покупка техники', 'Покупки Ozon', 'Ресторан \"Буйвол\"', 'Такси', 'Турагенство']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stores2020,stores2021,stores2022,sep='\\n\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cf4a229a",
+   "id": "5883346b",
    "metadata": {},
    "outputs": [],
    "source": []
