adding new files

--- a/HybridRecommender/DiscountCoef.ipynb
+++ b/HybridRecommender/DiscountCoef.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c045118f",
+   "id": "01c3c447",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "162b0e39",
+   "id": "e6bea3f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "26cbc34f",
+   "id": "68c51c42",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "bb9018d1",
+   "id": "1a091ade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "76cda7bd",
+   "id": "182752de",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "b2d67c99",
+   "id": "f0caf83d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "fe7bb6e0",
+   "id": "ad044c6b",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "cfff3e11",
+   "id": "c602b449",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "ba842b3c",
+   "id": "1e07fcbb",
    "metadata": {},
    "outputs": [
     {
@@ -750,28 +750,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "06a28e04",
+   "execution_count": 139,
+   "id": "332e4d9b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.DataFrame(visits.values(),index=visits.keys(),columns = ['clients'])"
+    "dataset = pd.DataFrame({'index': visits.values(),'id': visits.keys()},index=visits.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "a876519d",
+   "execution_count": 141,
+   "id": "6a7b7d54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset['clients'] = abs((dataset['clients'] - dataset['clients'].mean())/dataset['clients'].std())"
+    "dataset['index'] = abs((dataset['index'] - dataset['index'].mean())/dataset['index'].std())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "51b5cfc5",
+   "execution_count": 142,
+   "id": "95c68372",
    "metadata": {},
    "outputs": [
     {
@@ -795,77 +795,89 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>clients</th>\n",
+       "      <th>index</th>\n",
+       "      <th>id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>10221462.0</th>\n",
        "      <td>0.336977</td>\n",
+       "      <td>10221462.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10220237.0</th>\n",
        "      <td>0.290656</td>\n",
+       "      <td>10220237.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10215286.0</th>\n",
        "      <td>0.276759</td>\n",
+       "      <td>10215286.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11128769.0</th>\n",
        "      <td>0.371719</td>\n",
+       "      <td>11128769.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10356763.0</th>\n",
        "      <td>2.055547</td>\n",
+       "      <td>10356763.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10359596.0</th>\n",
        "      <td>0.406460</td>\n",
+       "      <td>10359596.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10403944.0</th>\n",
        "      <td>0.406460</td>\n",
+       "      <td>10403944.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11259151.0</th>\n",
        "      <td>0.406460</td>\n",
+       "      <td>11259151.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10837035.0</th>\n",
        "      <td>0.406460</td>\n",
+       "      <td>10837035.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11018218.0</th>\n",
        "      <td>0.406460</td>\n",
+       "      <td>11018218.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>245 rows × 1 columns</p>\n",
+       "<p>245 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             clients\n",
-       "10221462.0  0.336977\n",
-       "10220237.0  0.290656\n",
-       "10215286.0  0.276759\n",
-       "11128769.0  0.371719\n",
-       "10356763.0  2.055547\n",
-       "...              ...\n",
-       "10359596.0  0.406460\n",
-       "10403944.0  0.406460\n",
-       "11259151.0  0.406460\n",
-       "10837035.0  0.406460\n",
-       "11018218.0  0.406460\n",
+       "               index          id\n",
+       "10221462.0  0.336977  10221462.0\n",
+       "10220237.0  0.290656  10220237.0\n",
+       "10215286.0  0.276759  10215286.0\n",
+       "11128769.0  0.371719  11128769.0\n",
+       "10356763.0  2.055547  10356763.0\n",
+       "...              ...         ...\n",
+       "10359596.0  0.406460  10359596.0\n",
+       "10403944.0  0.406460  10403944.0\n",
+       "11259151.0  0.406460  11259151.0\n",
+       "10837035.0  0.406460  10837035.0\n",
+       "11018218.0  0.406460  11018218.0\n",
        "\n",
-       "[245 rows x 1 columns]"
+       "[245 rows x 2 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "fccb1ff0",
+   "id": "5e4a911d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "ac20af81",
+   "id": "3822e956",
    "metadata": {},
    "outputs": [
     {
@@ -918,272 +930,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "d005decf",
+   "execution_count": null,
+   "id": "313aabf9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{10221462.0: 281.8181818181818,\n",
-       " 10220237.0: 566.6666666666667,\n",
-       " 10215286.0: 950.0,\n",
-       " 11128769.0: 88.88888888888889,\n",
-       " 10356763.0: 10650.0,\n",
-       " 11127430.0: 3425.0,\n",
-       " 10219502.0: 4600.0,\n",
-       " 11020225.0: 110.52631578947368,\n",
-       " 10213348.0: 4442.857142857142,\n",
-       " 11019309.0: 60.0,\n",
-       " 10834321.0: 836.3636363636364,\n",
-       " 11257084.0: 2450.0,\n",
-       " 10361741.0: 1195.4545454545455,\n",
-       " 10575351.0: 220.0,\n",
-       " 10218833.0: 52.38095238095238,\n",
-       " 11257902.0: 1080.0,\n",
-       " 10364498.0: 392.3076923076923,\n",
-       " 10404735.0: 1862.5,\n",
-       " 10355392.0: 2040.0,\n",
-       " 10404748.0: 394.44444444444446,\n",
-       " 10367688.0: 40.0,\n",
-       " 11259804.0: 760.0,\n",
-       " 11020015.0: 330.0,\n",
-       " 10213960.0: 1400.0,\n",
-       " 11014186.0: 650.0,\n",
-       " 10581029.0: 128.57142857142858,\n",
-       " 10218863.0: 160.0,\n",
-       " 10402701.0: 2787.5,\n",
-       " 10355417.0: 7340.0,\n",
-       " 11122670.0: 1010.0,\n",
-       " 11122002.0: 70.0,\n",
-       " 11012574.0: 400.0,\n",
-       " 10219380.0: 650.0,\n",
-       " 11257217.0: 6010.0,\n",
-       " 10404615.0: 810.0,\n",
-       " 10406690.0: 25972.727272727272,\n",
-       " 11119835.0: 910.0,\n",
-       " 10355641.0: 18790.47619047619,\n",
-       " 11253064.0: 1550.0,\n",
-       " 10398600.0: 933.3333333333334,\n",
-       " 10357580.0: 1483.3333333333335,\n",
-       " 10212548.0: 4120.0,\n",
-       " 11000779.0: 277.27272727272725,\n",
-       " 10577475.0: 3650.0,\n",
-       " 10355445.0: 2825.0,\n",
-       " 11258643.0: 7766.666666666667,\n",
-       " 10220770.0: 2590.0,\n",
-       " 11020171.0: 8330.0,\n",
-       " 10562352.0: 2283.3333333333335,\n",
-       " 10568660.0: 350.0,\n",
-       " 10836441.0: 231.25,\n",
-       " 10562323.0: 764.7058823529411,\n",
-       " 11128132.0: 504.54545454545456,\n",
-       " 10217384.0: 2940.0,\n",
-       " 10213902.0: 3280.0,\n",
-       " 10371298.0: 928.5714285714284,\n",
-       " 10220163.0: 950.0,\n",
-       " 10402757.0: 1137.5,\n",
-       " 10836387.0: 6970.0,\n",
-       " 10580198.0: 120.0,\n",
-       " 10218209.0: 742.8571428571428,\n",
-       " 11121022.0: 1380.0,\n",
-       " 11019989.0: 150.0,\n",
-       " 11257311.0: 2485.7142857142853,\n",
-       " 10837991.0: 6588.888888888889,\n",
-       " 10574034.0: 717.6470588235294,\n",
-       " 10572098.0: 833.3333333333334,\n",
-       " 11126005.0: 40.0,\n",
-       " 11135326.0: 830.0,\n",
-       " 10569958.0: 480.0,\n",
-       " 10219383.0: 227.27272727272728,\n",
-       " 11259771.0: 18565.0,\n",
-       " 11126743.0: 330.0,\n",
-       " 11261300.0: 890.0,\n",
-       " 10360759.0: 4377.777777777778,\n",
-       " 11018820.0: 5028.571428571428,\n",
-       " 10214653.0: 390.90909090909093,\n",
-       " 10407379.0: 1599.9999999999998,\n",
-       " 10568006.0: 199.99999999999997,\n",
-       " 10580277.0: 4833.333333333334,\n",
-       " 10213259.0: 1050.0,\n",
-       " 10361041.0: 470.0,\n",
-       " 11259157.0: 2300.0,\n",
-       " 10216133.0: 840.0,\n",
-       " 10404046.0: 380.0,\n",
-       " 10218123.0: 207.69230769230768,\n",
-       " 11000151.0: 925.0,\n",
-       " 10218815.0: 2312.5,\n",
-       " 11258647.0: 738.4615384615385,\n",
-       " 10354174.0: 2763.6363636363635,\n",
-       " 10400644.0: 311.11111111111114,\n",
-       " 11257922.0: 5066.666666666667,\n",
-       " 10361010.0: 210.0,\n",
-       " 10215398.0: 4250.0,\n",
-       " 11121303.0: 100.0,\n",
-       " 11258570.0: 740.0,\n",
-       " 10360737.0: 818.1818181818181,\n",
-       " 10220687.0: 1960.0,\n",
-       " 11011352.0: 1116.6666666666667,\n",
-       " 11120332.0: 173.33333333333334,\n",
-       " 10360800.0: 3228.5714285714284,\n",
-       " 11259281.0: 210.0,\n",
-       " 11261158.0: 6555.555555555556,\n",
-       " 11121172.0: 282.6086956521739,\n",
-       " 11011968.0: 2240.0,\n",
-       " 11020307.0: 106.25,\n",
-       " 10359664.0: 3257.1428571428573,\n",
-       " 11260095.0: 3406.25,\n",
-       " 11108096.0: 1325.0,\n",
-       " 10404096.0: 87.5,\n",
-       " 11013435.0: 2666.666666666667,\n",
-       " 10220196.0: 100.0,\n",
-       " 11004905.0: 4276.923076923077,\n",
-       " 10567185.0: 3860.0,\n",
-       " 10834988.0: 2414.285714285714,\n",
-       " 10831118.0: 6587.5,\n",
-       " 10838002.0: 630.0,\n",
-       " 10361502.0: 4755.555555555556,\n",
-       " 10213299.0: 88.88888888888889,\n",
-       " 10562327.0: 360.0,\n",
-       " 10404555.0: 1850.0,\n",
-       " 10837346.0: 619.047619047619,\n",
-       " 10222135.0: 200.0,\n",
-       " 10404533.0: 122.22222222222223,\n",
-       " 10577539.0: 20.0,\n",
-       " 10567954.0: 11380.0,\n",
-       " 10220285.0: 391.6666666666667,\n",
-       " 10403407.0: 792.8571428571428,\n",
-       " 11000129.0: 560.0,\n",
-       " 10550756.0: 587.5,\n",
-       " 10574677.0: 1092.8571428571427,\n",
-       " 10218659.0: 600.0,\n",
-       " 11017418.0: 320.0,\n",
-       " 10218204.0: 1318.1818181818182,\n",
-       " 10571196.0: 110.0,\n",
-       " 10218669.0: 185.0,\n",
-       " 10550768.0: 60.0,\n",
-       " 11260060.0: 100.0,\n",
-       " 10214703.0: 68.75,\n",
-       " 10574662.0: 1257.142857142857,\n",
-       " 10405540.0: 1100.0,\n",
-       " 10567166.0: 4100.0,\n",
-       " 10216816.0: 11060.0,\n",
-       " 10574755.0: 125.0,\n",
-       " 11257683.0: 2160.0,\n",
-       " 10574664.0: 3330.0,\n",
-       " 11007017.0: 763.1578947368421,\n",
-       " 11001412.0: 690.0,\n",
-       " 10218584.0: 985.7142857142857,\n",
-       " 10217366.0: 2306.25,\n",
-       " 10354725.0: 2760.0,\n",
-       " 10216806.0: 2966.666666666667,\n",
-       " 11123928.0: 1970.0,\n",
-       " 10218864.0: 7228.5714285714275,\n",
-       " 11257209.0: 550.0,\n",
-       " 10220154.0: 2410.0,\n",
-       " 11018939.0: 475.0,\n",
-       " 10214586.0: 6240.0,\n",
-       " 10218150.0: 23.52941176470588,\n",
-       " 11121721.0: 193.33333333333334,\n",
-       " 10832364.0: 610.0,\n",
-       " 11257083.0: 47.05882352941176,\n",
-       " 10362381.0: 50.0,\n",
-       " 11259088.0: 8894.444444444445,\n",
-       " 10403940.0: 800.0,\n",
-       " 11123954.0: 271.42857142857144,\n",
-       " 10356174.0: 2280.952380952381,\n",
-       " 10212599.0: 330.0,\n",
-       " 10567337.0: 570.0,\n",
-       " 10399864.0: 4310.0,\n",
-       " 10578812.0: 609.0909090909091,\n",
-       " 10216023.0: 304.54545454545456,\n",
-       " 10574795.0: 1120.0,\n",
-       " 11259278.0: 50.0,\n",
-       " 10583558.0: 1000.0,\n",
-       " 10579621.0: 2000.0,\n",
-       " 11011993.0: 150.0,\n",
-       " 10572694.0: 66.66666666666667,\n",
-       " 10363026.0: 783.3333333333334,\n",
-       " 11008254.0: 140.0,\n",
-       " 11099104.0: 260.0,\n",
-       " 10565113.0: 1000.0,\n",
-       " 11015312.0: 121.05263157894737,\n",
-       " 10580196.0: 845.4545454545455,\n",
-       " 11001531.0: 63.63636363636363,\n",
-       " 11008961.0: 1475.0,\n",
-       " 10578124.0: 150.0,\n",
-       " 11013542.0: 540.0,\n",
-       " 11253159.0: 240.0,\n",
-       " 10573415.0: 1280.0,\n",
-       " 11099056.0: 4280.0,\n",
-       " 11124561.0: 322.22222222222223,\n",
-       " 10359528.0: 294.44444444444446,\n",
-       " 10405457.0: 110.0,\n",
-       " 10397820.0: 455.5555555555556,\n",
-       " 11261199.0: 30.769230769230766,\n",
-       " 11120630.0: 560.0,\n",
-       " 10571507.0: 118.18181818181819,\n",
-       " 10568655.0: 63.63636363636363,\n",
-       " 11000848.0: 320.0,\n",
-       " 11014659.0: 200.0,\n",
-       " 10572571.0: 250.0,\n",
-       " 11006147.0: 218.1818181818182,\n",
-       " 11006864.0: 380.0,\n",
-       " 10405930.0: 587.5,\n",
-       " 10578954.0: 600.0,\n",
-       " 10218806.0: 85.71428571428572,\n",
-       " 11259890.0: 385.71428571428567,\n",
-       " 10219977.0: 110.0,\n",
-       " 10363113.0: 360.0,\n",
-       " 10367730.0: 19.047619047619047,\n",
-       " 11018922.0: 85.71428571428571,\n",
-       " 10218199.0: 60.0,\n",
-       " 10583631.0: 30.0,\n",
-       " 11125216.0: 28.57142857142857,\n",
-       " 10404542.0: 50.0,\n",
-       " 10214632.0: 35.71428571428571,\n",
-       " 11255247.0: 30.0,\n",
-       " 11011869.0: 22.22222222222222,\n",
-       " 10563714.0: 10.0,\n",
-       " 10577581.0: 42.857142857142854,\n",
-       " 10215443.0: 64.70588235294117,\n",
-       " 10357606.0: 72.72727272727273,\n",
-       " 11257940.0: 14.285714285714285,\n",
-       " 10576822.0: 220.0,\n",
-       " 11260548.0: 50.0,\n",
-       " 11004939.0: 100.0,\n",
-       " 10833191.0: 10.0,\n",
-       " 10578218.0: 20.0,\n",
-       " 10569397.0: 30.0,\n",
-       " 10565800.0: 12.5,\n",
-       " 10581714.0: 40.0,\n",
-       " 10404528.0: 40.0,\n",
-       " 11124024.0: 50.0,\n",
-       " 11011865.0: 58.333333333333336,\n",
-       " 10218680.0: 70.0,\n",
-       " 10218220.0: 37.5,\n",
-       " 11012113.0: 10.0,\n",
-       " 10828227.0: 10.0,\n",
-       " 10217421.0: 10.0,\n",
-       " 10359596.0: 14.285714285714285,\n",
-       " 10403944.0: 10.0,\n",
-       " 11259151.0: 10.0,\n",
-       " 10837035.0: 10.0,\n",
-       " 11018218.0: 10.0}"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "coefficient = {}\n",
     "\n",
-    "for key,val in visits.items():\n",
-    "    id = float(key.split()[1])\n",
+    "for i in range(len(data2020)):\n",
+    "    id = data2020.loc[i]['ID Клиента']\n",
     "    discoef = discountCoef(id)\n",
-    "    coefficient[id] = val/discoef\n",
+    "    visit = dataset[dataset['id'] == id]['index']\n",
+    "    money = dataMoney.loc[i].value\n",
+    "    print(money,visit,discoef)\n",
+    "    \n",
+    "    coefficient[id] = money*visit/discoef\n",
     "    \n",
     "coefficient"
    ]
@@ -1191,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b657d6",
+   "id": "d1678db6",
    "metadata": {},
    "outputs": [],
    "source": []
