--- a/HybridRecommender/DiscountCoef.ipynb
+++ b/HybridRecommender/DiscountCoef.ipynb
@@ -189,6 +189,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ede71ae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id = list(data2022['ID Клиента'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "182752de",
    "metadata": {},
